footer fix on safari, cache config

--- a/assets/css/_trips.scss
+++ b/assets/css/_trips.scss
@@ -37,29 +37,23 @@
 
 .phx-connected {
   width: 100%;
-  flex-grow: 1;
+  flex: 1;
   flex-direction: column;
   display: flex;
-  flex-shrink: 1;
-  flex-basis: 0;
 }
 
 .phx-disconnected {
   width: 100%;
-  flex-grow: 1;
+  flex: 1;
   flex-direction: column;
   display: flex;
-  flex-shrink: 1;
-  flex-basis: 0;
 }
 
 .trips {
   width: 100%;
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: 0;
+  flex: 1;
 }
 
 .trips__details-header {
@@ -121,7 +115,8 @@
   flex-grow: 1;
   flex-shrink: 1;
   overflow-y: scroll;
-  flex-basis: 300px; /* IMPORTANT: you need this for non-chrome browsers */
+  flex-basis: 0;
+  min-height: 300px; /* IMPORTANT: you need this for non-chrome browsers */
 }
 
 .trips__trip {
